--- a/package.json
+++ b/package.json
@@ -10,8 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "lottie-react-native": "^6.7.2",
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-native": "0.75.2",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-reanimated": "^3.15.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-sound-player": "^0.14.3",
+    "react-native-svg": "^15.6.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
